# expe-domain-knowledge

./: README.md  definitions.py  pyproject.toml
resources/: aco_schemas.py  aco_templates.py  dates.csv  extraction_templates.py  feature_schemas.py  feature_templates.py  models.csv  ontology_schemas.py  rls_schemas.py  rls_templates.py
src/aco/: __init__.py  associations.py  connexion.py  names.py  numericals.py
src/data_ingestion/: data_from_pdf.py
src/feature_extraction/: __init__.py  extract_features.py
src/ontology_parsing/: __init__.py  langchain_rdf_parser.py  langchain_rdf_vectorstore.py  ontology_lex_processing.py  test.py
src/ontology_parsing/chroma_langchain_db/bda992ed-2086-4a39-bd0e-45cef43ea228/: index_metadata.pickle
src/relation_extraction/: __init__.py  carac.py  collocations.py  color.py  domain.py  has_part.py  instr.py  isa.py  lieu.py  loader.py  locution.py  manner.py  matter.py  models.py  nodes.py  process.py  run.py  script.php  syn.py
