[project]
name = "expe-domain-knowledge"
version = "0.1.0"
description = ""
authors = [
    {name = "Nadia Bebeshina",email = "nadia@meetdeal.fr"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "ollama (>=0.6.0,<0.7.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "poetry-core (>=2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "docling (>=2.57.0,<3.0.0)",
    "langchain-core (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "relation_extraction", from = "src"},
            {include = "feature_extraction", from = "src"},
            {include = "definitions"},
            {include = "feature_templates", from = "resources"},
            {include = "feature_schemas", from = "resources"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
